fixed backgoround image on mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -7,7 +7,7 @@ body {
 	background-image: url('../images/website-bg-white-small2.png');
 	background-repeat: no-repeat;
 	background-size: cover;
-	min-height: 1000px;
+	min-height: 1200px;
 	// margin-bottom: 220px;
 }
 
@@ -586,8 +586,12 @@ footer a {
 
 @media (max-width: @screen-xs-min) {
 	#footer {
-		background-color: #fff;
+		// background-color: #EAEAEA;
 		height: 165px;
+	}
+
+	body {
+		background-repeat: repeat;
 	}
 
 	// .index-bg {
